# dictutils

./: AGENTS.md  Cargo.toml  DICTUTILS_DOCUMENTATION.md  PROBLEMS.md  PRODUCTION_REVIEW.md  README.md  TASKS.md
examples/: README.md  basic_dict_loading.rs  dict_search_operations.rs
references/minilzo_rs/: lib.rs  minilzo.rs
src/: lib.rs  traits.rs
src/dict/: bgl.rs  dsl.rs  mdict.rs  mod.rs  stardict.rs  zimdict.rs
src/index/: btree.rs  fts.rs  mod.rs
src/tests/: concurrent_tests.rs  error_tests.rs  fuzz_tests.rs  integration_tests.rs  mdx_encoding_test.rs  mod.rs  performance_tests.rs  unit_tests.rs
src/util/: compression.rs  encoding.rs  mod.rs  test_utils.rs
tests/: test_mdx_fix.rs
