[package]
name = "dictutils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memory-mapped file access
memmap2 = "0.9"

# Compression and encoding
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"
minilzo-rs = "0.6.1"
encoding_rs = "0.8"

# Search and indexing
tantivy = "0.19"
fst = "0.4"

# Utilities
clap = { version = "4.0", optional = true }
regex = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sysinfo = "0.30"
sha2 = "0.10"
log = "0.4"
rayon = { version = "1.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lru-cache = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = []
cli = ["clap"]
rayon = ["dep:rayon"]
high_performance = ["rayon"]

# [[bench]]
# name = "benchmarks"
# harness = false
